--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "17.0.2",
     "react-gauge-chart": "^0.4.0",
     "react-native": "^0.68.2",
+    "react-native-actions-sheet-picker": "^0.3.5",
     "react-native-background-timer": "^2.4.1",
     "react-native-bar-chart": "^0.1.0",
     "react-native-chart-kit": "^6.12.0",
