--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mocha": "^10.0.0",
     "native-base": "^3.4.7",
     "node-csv": "^0.1.2",
+    "node-fetch": "^3.2.10",
     "react": "17.0.2",
     "react-avatar": "^5.0.1",
     "react-d3-speedometer": "^1.0.2",
